[workspace]

members = [
    ## Core logic and data structures
    #"katke-core" 

    ## Combined UI and rendering (including panels system)
    #"katke-graphics",  

    ## Web/WASM frontend
    #"katke-web",       

    # Native desktop frontend
    "katke-desktop"    
]

resolver = "2"

[workspace.dependencies]

# Graphics API - Provides modern graphics API abstraction
wgpu = "0.19.4" 

# Window creation and event handling
winit = "0.29.15"

# Async runtime for wgpu intialization
# Required because wgpu uses async operations for setup
pollster = "0.3.0"